--- a/explore_zillow.ipynb
+++ b/explore_zillow.ipynb
@@ -1793,6 +1793,336 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>parcelid</th>\n",
+       "      <th>bathroomcnt</th>\n",
+       "      <th>bedroomcnt</th>\n",
+       "      <th>buildingqualitytypeid</th>\n",
+       "      <th>calculatedfinishedsquarefeet</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>lotsizesquarefeet</th>\n",
+       "      <th>...</th>\n",
+       "      <th>regionidzip</th>\n",
+       "      <th>roomcnt</th>\n",
+       "      <th>unitcnt</th>\n",
+       "      <th>yearbuilt</th>\n",
+       "      <th>structuretaxvaluedollarcnt</th>\n",
+       "      <th>taxvaluedollarcnt</th>\n",
+       "      <th>assessmentyear</th>\n",
+       "      <th>landtaxvaluedollarcnt</th>\n",
+       "      <th>taxamount</th>\n",
+       "      <th>logerror</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "      <td>41,727.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>39,334.42</td>\n",
+       "      <td>12,994,525.02</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>22,567.34</td>\n",
+       "      <td>2,046,440.18</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>10,711,855.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>19,464.00</td>\n",
+       "      <td>11,540,230.00</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>40,000.00</td>\n",
+       "      <td>12,579,987.00</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>59,027.00</td>\n",
+       "      <td>14,248,883.50</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>77,548.00</td>\n",
+       "      <td>162,960,596.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Unnamed: 0             parcelid          bathroomcnt  \\\n",
+       "count            41,727.00            41,727.00            41,727.00   \n",
+       "mean             39,334.42        12,994,525.02                 0.14   \n",
+       "std              22,567.34         2,046,440.18                 0.10   \n",
+       "min                   0.00        10,711,855.00                 0.00   \n",
+       "25%              19,464.00        11,540,230.00                 0.11   \n",
+       "50%              40,000.00        12,579,987.00                 0.11   \n",
+       "75%              59,027.00        14,248,883.50                 0.22   \n",
+       "max              77,548.00       162,960,596.00                 1.00   \n",
+       "\n",
+       "                bedroomcnt  buildingqualitytypeid  \\\n",
+       "count            41,727.00              41,727.00   \n",
+       "mean                  0.20                   0.49   \n",
+       "std                   0.10                   0.12   \n",
+       "min                   0.00                   0.00   \n",
+       "25%                   0.10                   0.45   \n",
+       "50%                   0.20                   0.45   \n",
+       "75%                   0.30                   0.55   \n",
+       "max                   1.00                   1.00   \n",
+       "\n",
+       "       calculatedfinishedsquarefeet                 fips             latitude  \\\n",
+       "count                     41,727.00            41,727.00            41,727.00   \n",
+       "mean                           0.11                 0.16                 0.45   \n",
+       "std                            0.08                 0.28                 0.18   \n",
+       "min                            0.00                 0.00                 0.00   \n",
+       "25%                            0.06                 0.00                 0.31   \n",
+       "50%                            0.09                 0.00                 0.45   \n",
+       "75%                            0.13                 0.30                 0.56   \n",
+       "max                            1.00                 1.00                 1.00   \n",
+       "\n",
+       "                 longitude    lotsizesquarefeet  ...          regionidzip  \\\n",
+       "count            41,727.00            41,727.00  ...            41,727.00   \n",
+       "mean                  0.67                 0.00  ...                 0.00   \n",
+       "std                   0.19                 0.02  ...                 0.01   \n",
+       "min                   0.00                 0.00  ...                 0.00   \n",
+       "25%                   0.56                 0.00  ...                 0.00   \n",
+       "50%                   0.69                 0.00  ...                 0.00   \n",
+       "75%                   0.82                 0.00  ...                 0.00   \n",
+       "max                   1.00                 1.00  ...                 1.00   \n",
+       "\n",
+       "                   roomcnt              unitcnt            yearbuilt  \\\n",
+       "count            41,727.00            41,727.00            41,727.00   \n",
+       "mean                  0.11                 0.00                 0.66   \n",
+       "std                   0.21                 0.00                 0.17   \n",
+       "min                   0.00                 0.00                 0.00   \n",
+       "25%                   0.00                 0.00                 0.55   \n",
+       "50%                   0.00                 0.00                 0.67   \n",
+       "75%                   0.00                 0.00                 0.78   \n",
+       "max                   1.00                 0.00                 1.00   \n",
+       "\n",
+       "       structuretaxvaluedollarcnt    taxvaluedollarcnt       assessmentyear  \\\n",
+       "count                   41,727.00            41,727.00            41,727.00   \n",
+       "mean                         0.05                 0.10                 0.00   \n",
+       "std                          0.05                 0.10                 0.00   \n",
+       "min                          0.00                 0.00                 0.00   \n",
+       "25%                          0.02                 0.04                 0.00   \n",
+       "50%                          0.04                 0.08                 0.00   \n",
+       "75%                          0.06                 0.12                 0.00   \n",
+       "max                          1.00                 1.00                 0.00   \n",
+       "\n",
+       "       landtaxvaluedollarcnt            taxamount             logerror  \n",
+       "count              41,727.00            41,727.00            41,727.00  \n",
+       "mean                    0.07                 0.04                 0.42  \n",
+       "std                     0.08                 0.04                 0.03  \n",
+       "min                     0.00                 0.00                 0.00  \n",
+       "25%                     0.02                 0.02                 0.41  \n",
+       "50%                     0.05                 0.03                 0.42  \n",
+       "75%                     0.09                 0.05                 0.42  \n",
+       "max                     1.00                 1.00                 1.00  \n",
+       "\n",
+       "[8 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
